infrastructure/elasticsearch/headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  labels:
    app: elasticsearch
spec:
  ports:
    - name: db
      port: 9200
      targetPort: 9200
    - name: transport
      port: 9300
      targetPort: 9300
  clusterIP: None
  selector:
    app: elasticsearch
