infrastructure/elasticsearch/cerebro.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: cerebro
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: cerebro
  template:
    metadata:
      labels:
        app: cerebro
    spec:
      containers:
        - name: cerebro
          image: lmenezes/cerebro:latest
          ports:
            - name: cerebro
              containerPort: 9000
          resources:
            limits:
              memory: 512Mi
              cpu: '1'
            requests:
              memory: 256Mi
              cpu: '0.2'

---
apiVersion: v1
kind: Service
metadata:
  name: cerebro-svc
  labels:
    app: cerebro
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: cerebro
      protocol: TCP
  selector:
    app: cerebro

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cerebro-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: $1$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - reza.westeurope.cloudapp.azure.com
      secretName: tls-secret
  rules:
    - host: reza.westeurope.cloudapp.azure.com
      http:
        paths:
          - path: /ui/cerebro(/|$)(.*)
            backend:
              serviceName: cerebro-svc
              servicePort: http
