infrastructure/elasticsearch/debug-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-debug
  labels:
    app: elasticsearch-debug
spec:
  ports:
    - name: db
      port: 9200
      targetPort: 9200
    - name: transport
      port: 9300
      targetPort: 9300
  clusterIP: None
  selector:
    app: elasticsearch

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: elasticsearch-debug-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - reza-web'
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - reza.westeurope.cloudapp.azure.com
      secretName: tls-secret
  rules:
    - host: reza.westeurope.cloudapp.azure.com
      http:
        paths:
          - path: /ui/elasticsearch(/|$)(.*)
            backend:
              serviceName: elasticsearch-debug
              servicePort: 9200
